created tests for product, daca dai run se schimba baza de date, nu am facut-o bd de test inca